--- a/IconTrendsPresentation/Views/Announcement/Index.cshtml
+++ b/IconTrendsPresentation/Views/Announcement/Index.cshtml
@@ -29,7 +29,7 @@
                     </div>
                 }
 
-                <a href="DuyuruEkle.html" class="btn btn-outline-info mt-4">Yeni Duyuru Oluştur</a>
+                <a href="/Announcement/Add" class="btn btn-outline-info mt-4">Yeni Duyuru Oluştur</a>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-xl-4">
