--- a/IconTrendsPresentation/Views/Announcement/Index.cshtml
+++ b/IconTrendsPresentation/Views/Announcement/Index.cshtml
@@ -16,7 +16,7 @@
                 @foreach (var item in Model)
                 {
                     <div class="d-flex align-items-center border-bottom py-3">
-                        <a href="#" class="btn btn-primary rounded-circle  btn-sm" style="margin-right:3px;">Sil</a>
+                        <a href="/Announcement/DeleteAnnounce/@item.Id" class="btn btn-primary rounded-circle  btn-sm" style="margin-right:3px;">Sil</a>
                         <a href="#" class="btn btn-outline-warning  btn-sm" style="margin-left:3px;margin-left:5px;">Güncelle</a>
                         <img class="rounded-circle flex-shrink-0 " src="~/admin/img/icons.ico" alt="" style="width: 40px; height: 40px;">
                         <div class="w-100 ms-3">
